--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			ga('send', 'pageview');
 		</script>
 		<!-- End Google Analytics -->
-
 	</head>
+
 	<body id="top">
 
 		<!-- Header -->
@@ -201,9 +201,9 @@
 						</div>
 					</div> -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; HomeSeen. All rights reserved.</li>
+						<!-- <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Images: <a href="http://unsplash.com">Unsplash</a></li> -->
 					</ul>
 				</div>
 			</footer>
