--- a/index.html
+++ b/index.html
@@ -66,30 +66,30 @@
 		<!-- One -->
 			<section id="one" class="wrapper style1">
 				<header class="major">
-					<h2>我們想照顧的不只是長輩，是整個家</h2>
-					<p></p>
+					<h2>失智症被世界公認為「最難照顧的疾病」</h2>
+					<p>「當家屬扶著失智病人走進診間時，我看到的是兩個病人」-- 神經內科醫生</p>
 				</header>
 				<div class="container">
 					<div class="row">
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-area-chart major"></i>
-								<h3>Justo placerat</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<h3>每四秒就有一個人失智</h3>
+								<p>WHO官方網站指出全球有4750萬名失智症患者，且以每年增加770萬人的速度成長，也就是每4秒鐘就有一名新罹病者。而失智人口數每20年成長一倍，2050年將超過1億3550萬人。</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-refresh major"></i>
-								<h3>Blandit quis curae</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<h3>一年失智症的成本可以發射13422次的太空梭</h3>
+								<p>根據 2010 年全球失智症報告,失智症在全世界造成的社會成本超過世界 GDP 的 1% (6,040億美元)</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-cog major"></i>
-								<h3>Amet sed accumsan</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<h3>一名失智症老人可能影響 22.7 人的生活</h3>
+								<p>1/4的照顧者因照顧工作,導致身體健康每況愈下,有 1/8 因而經常生病,另有1/7為照顧患者而失去工作 (湯麗玉, 1991)</p>
 							</section>
 						</div>
 					</div>
@@ -99,7 +99,7 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<header class="major">
-					<h2>Commodo accumsan aliquam</h2>
+					<h2>我們照顧的不只是失智患者，是整個家</h2>
 					<p>Amet nisi nunc lorem accumsan</p>
 				</header>
 				<div class="container">
