banner image and part2

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#">Ion</a></h1>
+				<h1><a href="#">HomeSeen</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="https://homeseen.typeform.com/to/RzKJs7">訂閱</a></li>
 						<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li>
 						<li><a href="right-sidebar.html">Right Sidebar</a></li>
 						<li><a href="no-sidebar.html">No Sidebar</a></li>
@@ -100,15 +100,15 @@
 			<section id="two" class="wrapper style2">
 				<header class="major">
 					<h2>我們照顧的不只是失智患者，是整個家</h2>
-					<p>Amet nisi nunc lorem accumsan</p>
+					<p>HomeSeen，名稱取自於台語的「放心」，致力把每個失智家庭的需要，都放在心裡。<br>我們是一群由醫師、軟硬體工程師與行銷企劃組成的團隊 <br>最近在徵求失智患者或是有看護的家庭，想要更深入洞察照顧者與患者的生活困境<br>設計出更符合使用者需求的服務與產品。</p>
 				</header>
 				<div class="container">
 					<div class="row">
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-								<h3>Mollis adipiscing nisl</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
+								<h3>[徵求] 有看護的家庭</h3>
+								<p>如果您家裡有長輩，並且有僱用看護幫忙照顧，請與我們聯絡。<br>不限國籍，無經驗可</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -117,8 +117,8 @@
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>Neque ornare adipiscing</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
+								<h3>[徵求] 有失智患者的家庭</h3>
+								<p>逼哩八拉 嘻嘻哈哈 嗯嗯啊啊</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -202,8 +202,8 @@
 					</div> -->
 					<ul class="copyright">
 						<li>&copy; HomeSeen. All rights reserved.</li>
-						<!-- <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li> -->
+						<li>hello.homeseen@gmail.com</li>
+						<!-- <li>Images: <a href="http://unsplash.com">Unsplash</a></li> -->
 					</ul>
 				</div>
 			</footer>
