wording and image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h2>Home Seen</h2>
-					<p>減輕照顧者負擔，讓心愛的人安心變老</p>
+					<p>讓失智的家人，安心變老</p>
 					<ul class="actions">
 						<li><a href="https://homeseen.typeform.com/to/RzKJs7" class="button big alt">訂閱</a></li>
 						<li><a href="https://homeseen.typeform.com/to/LsYxVp" class="button big special">參加訪談</a></li>
@@ -74,22 +74,22 @@
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-area-chart major"></i>
-								<h3>每四秒就有一個人失智</h3>
-								<p>WHO官方網站指出全球有4750萬名失智症患者，且以每年增加770萬人的速度成長，也就是每4秒鐘就有一名新罹病者。而失智人口數每20年成長一倍，2050年將超過1億3550萬人。</p>
-							</section>
-						</div>
-						<div class="4u">
-							<section class="special box">
-								<i class="icon fa-refresh major"></i>
-								<h3>一年失智症的成本可以發射13422次的太空梭</h3>
-								<p>根據 2010 年全球失智症報告,失智症在全世界造成的社會成本超過世界 GDP 的 1% (6,040億美元)</p>
+								<h3>每四秒就多一個失智患者</h3>
+								<p>研究指出，全球有近五千萬名失智患者，且以每年增加七百多萬的速度成長，也就是每四秒鐘就有一名新罹病者，而失智人口數每二十年成長一倍。</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-cog major"></i>
-								<h3>一名失智症老人可能影響 22.7 人的生活</h3>
-								<p>1/4的照顧者因照顧工作,導致身體健康每況愈下,有 1/8 因而經常生病,另有1/7為照顧患者而失去工作 (湯麗玉, 1991)</p>
+								<h3>一名失智症老人會影響23人的生活</h3>
+								<p>照顧的重擔，使得每七人就有一人因此無法外出工作，四分之一的的照顧者健康每況愈下，更有八分之一的人經常生病。</p>
+							</section>
+						</div>
+						<div class="4u">
+							<section class="special box">
+								<i class="icon fa-refresh major"></i>
+								<h3>75%的失智症照顧者曾感到憂鬱</h3>
+								<p>失智症患者因認知功能障礙而出現不同程度的干擾行為，長期照顧失智症患者的情境下，照顧者身心負荷將會逐漸升高</p>
 							</section>
 						</div>
 					</div>
@@ -100,7 +100,7 @@
 			<section id="two" class="wrapper style2">
 				<header class="major">
 					<h2>我們照顧的不只是失智患者，是整個家</h2>
-					<p>HomeSeen，名稱取自於台語的「放心」，致力把每個失智家庭的需要，都放在心裡。<br>我們是一群由醫師、軟硬體工程師與行銷企劃組成的團隊 <br>最近在徵求失智患者或是有看護的家庭，想要更深入洞察照顧者與患者的生活困境<br>設計出更符合使用者需求的服務與產品。</p>
+					<p>HomeSeen，取自於台語的「放心」，要把每個失智家庭的需要放在心裡。<br>我們是一群由醫師、軟硬體工程師與行銷企劃組成的團隊 <br>希望訪問有失智患者或是看護的家庭，以更深入瞭解照顧者與患者的生活困境<br>設計出更符合使用者需求的服務與產品。</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -108,19 +108,19 @@
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 								<h3>[徵求] 有看護的家庭</h3>
-								<p>如果您家裡有長輩，並且有僱用看護幫忙照顧，請與我們聯絡。<br>不限國籍，無經驗可</p>
+								<p>如果您家裡有長輩，並且有僱用看護幫忙照顧<br>願意填寫簡單的資訊、或是參與訪談，請與我們聯絡。</p>
 								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
+									<li><a href="#" class="button alt">我想參加</a></li>
 								</ul>
 							</section>
 						</div>
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>[徵求] 有失智患者的家庭</h3>
-								<p>逼哩八拉 嘻嘻哈哈 嗯嗯啊啊</p>
+								<h3>[徵求] 由家人照顧長輩的家庭</h3>
+								<p>如果您家裡有長輩，並且由家中成員幫忙照顧<br>願意填寫簡單的資訊、或是參與訪談，請與我們聯絡。</p>
 								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
+									<li><a href="#" class="button alt">我想參加</a></li>
 								</ul>
 							</section>
 						</div>
@@ -165,8 +165,8 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-			<!-- 		<div class="row double">
-						<div class="6u">
+					<!-- <div class="row double"> -->
+	<!-- 					<div class="6u">
 							<div class="row collapse-at-2">
 								<div class="6u">
 									<h3>Accumsan</h3>
@@ -187,19 +187,21 @@
 									</ul>
 								</div>
 							</div>
-						</div>
-						<div class="6u">
-							<h2>Aliquam Interdum</h2>
-							<p>Blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan justo aliquet.</p>
-							<ul class="icons">
+						</div> -->
+						<div class="0u" style="text-align: center">
+							<h2>訂閱一份關心</h2>
+							<pa>如果您現在並沒有相關需求，但也一樣關心台灣失智家庭的困境，<br>
+							也歡迎留下您的Email，我們只會與您更新重大消息，不會盜用或是濫發廣告信。<br>不打擾，是我們的溫柔</p>
+							<a href="https://homeseen.typeform.com/to/RzKJs7" class="button big special">現在訂閱</a>
+							<!-- <ul class="icons">
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-							</ul>
+							</ul> -->
 						</div>
-					</div> -->
+					<!-- </div> -->
 					<ul class="copyright">
 						<li>&copy; HomeSeen. All rights reserved.</li>
 						<li>hello.homeseen@gmail.com</li>
