--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<head>
 		<title>HomeSeen</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="test" />
+		<meta name="keywords" content="dementia" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
