--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#">HomeSeen</a></h1>
+				<h1><a href="#">HOMESEEN</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="https://homeseen.typeform.com/to/RzKJs7">訂閱</a></li>
