--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
 -->
 <html>
 	<head>
-		<title>HomeSeen</title>
+		<title>HOMESEEN</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="test" />
 		<meta name="keywords" content="dementia" />
-		<meta property="og:url" content="https://www.mathnuggets.com/" />
-		<meta property="og:image" content="https://www.mathnuggets.com/images/fb-logo.jpg" />
-			<meta property="og:title" content="HOMESEEN" />
+		<meta property="og:title" content="HOMESEEN" />
 		<meta property="og:description" content="讓失智的家人，安心變老" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
