HomeSeen to HOMESEEN

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<section id="two" class="wrapper style2">
 				<header class="major">
 					<h2>我們照顧的不只是失智患者，是整個家</h2>
-					<p>HomeSeen，取自於台語的「放心」，要把每個失智家庭的需要放在心裡。<br>我們是一群由醫師、軟硬體工程師與行銷企劃組成的團隊 <br>希望訪問有失智患者或是看護的家庭，以更深入瞭解照顧者與患者的生活困境<br>設計出更符合使用者需求的服務與產品。</p>
+					<p>HOMESEEN，取自於台語的「放心」，要把每個失智家庭的需要放在心裡。<br>我們是一群由醫師、軟硬體工程師與行銷企劃組成的團隊 <br>希望訪問有失智患者或是看護的家庭，以更深入瞭解照顧者與患者的生活困境<br>設計出更符合使用者需求的服務與產品。</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -205,7 +205,7 @@
 						</div>
 					<!-- </div> -->
 					<ul class="copyright">
-						<li>&copy; HomeSeen. All rights reserved.</li>
+						<li>&copy; HOMESEEN. All rights reserved.</li>
 						<li>hello.homeseen@gmail.com</li>
 						<!-- <li>Images: <a href="http://unsplash.com">Unsplash</a></li> -->
 					</ul>
