--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="test" />
 		<meta name="keywords" content="dementia" />
-		<meta property="og:title" content="失智家庭的陪跑者" />
+		<meta property="og:title" content="HOMESEEN - 失智家庭的陪跑者"/>
 		<meta property="og:description" content="HOMESEEN，取自於台語的「放心」，把每個失智家庭的需要放在心裡。我們志在設計出更符合失智家庭需求的服務與產品，把人生的最後一程放心走完。" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
