join interview action

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<p>讓失智的家人，安心變老</p>
 					<ul class="actions">
 						<li><a href="https://homeseen.typeform.com/to/RzKJs7" class="button big alt">訂閱</a></li>
-						<li><a href="https://homeseen.typeform.com/to/LsYxVp" class="button big special">參加訪談</a></li>
+						<li><a href="#two" class="button big special">參加訪談</a></li>
 						<!-- <li><a href="#elements" class="button big alt">參加訪談</a></li> -->
 					</ul>
 				</div>
