change join button

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-cog major"></i>
-								<h3>一名失智症老人會影響23人的生活</h3>
-								<p>照顧的重擔，使得每七人就有一人因此無法外出工作，四分之一的的照顧者健康每況愈下，更有八分之一的人經常生病。</p>
+								<h3>失智症的年成本等於</h3>
+								<p>失智症在全世界造成的社會成本超過世界 GDP 的 1%，約為六千億美元。在台灣每名失智症患者每年約需四十萬的各種費用，佔比健保資源的30%。</p>
 							</section>
 						</div>
 						<div class="4u">
@@ -112,17 +112,17 @@
 								<h3>[徵求] 有看護的家庭</h3>
 								<p>如果您家裡有長輩，並且有僱用看護幫忙照顧<br>願意填寫簡單的資訊、或是參與訪談，請與我們聯絡。</p>
 								<ul class="actions">
-									<li><a href="#" class="button alt">我想參加</a></li>
+									<li><a href="#" class="button big alt">我想參加</a></li>
 								</ul>
 							</section>
 						</div>
 						<div class="6u">
 							<section class="special">
 								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>[徵求] 由家人照顧長輩的家庭</h3>
-								<p>如果您家裡有長輩，並且由家中成員幫忙照顧<br>願意填寫簡單的資訊、或是參與訪談，請與我們聯絡。</p>
+								<h3>[徵求] 由家人照顧失智長輩的家庭</h3>
+								<p>如果您家裡有失智症的長輩<br>願意填寫簡單的資訊、或是參與訪談，請與我們聯絡。</p>
 								<ul class="actions">
-									<li><a href="#" class="button alt">我想參加</a></li>
+									<li><a href="#" class="button big alt">我想參加</a></li>
 								</ul>
 							</section>
 						</div>
