--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<p>讓失智的家人，安心變老</p>
 					<ul class="actions">
 						<li><a href="https://homeseen.typeform.com/to/RzKJs7" class="button big alt">訂閱</a></li>
-						<li><a href="#two" class="button big special">參加訪談</a></li>
+						<li><a href="#two" class="button big special">參加問券</a></li>
 						<!-- <li><a href="#elements" class="button big alt">參加訪談</a></li> -->
 					</ul>
 				</div>
@@ -83,7 +83,7 @@
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-cog major"></i>
-								<h3>失智症的年成本等於</h3>
+								<h3>失智症的年成本等於發射13000次火箭</h3>
 								<p>失智症在全世界造成的社會成本超過世界 GDP 的 1%，約為六千億美元。在台灣每名失智症患者每年約需四十萬的各種費用，佔比健保資源的30%。</p>
 							</section>
 						</div>
