--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<p>讓失智的家人，安心變老</p>
 					<ul class="actions">
 						<li><a href="https://homeseen.typeform.com/to/RzKJs7" class="button big alt">訂閱</a></li>
-						<li><a href="#two" class="button big special">參加問券</a></li>
+						<li><a href="#two" class="button big special">參加訪談</a></li>
 						<!-- <li><a href="#elements" class="button big alt">參加訪談</a></li> -->
 					</ul>
 				</div>
@@ -102,7 +102,7 @@
 			<section id="two" class="wrapper style2">
 				<header class="major">
 					<h2>我們照顧的不只是失智患者，是整個家</h2>
-					<p>HOMESEEN，取自於台語的「放心」，要把每個失智家庭的需要放在心裡。<br>我們是一群由醫師、軟硬體工程師與行銷企劃組成的團隊 <br>希望訪問有失智患者或是看護的家庭，以更深入瞭解照顧者與患者的生活困境<br>設計出更符合使用者需求的服務與產品。</p>
+					<p>HOMESEEN，取自於台語的「放心」，要把每個失智家庭的需要放在心裡。<br>我們是一群由醫學院學生、軟硬體工程師與行銷企劃組成的團隊 <br>希望訪問有失智患者或是看護的家庭，以更深入瞭解照顧者與患者的生活困境<br>設計出更符合使用者需求的服務與產品。</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -112,7 +112,7 @@
 								<h3>[徵求] 有看護的家庭</h3>
 								<p>如果您家裡有長輩，並且有僱用看護幫忙照顧<br>願意填寫簡單的資訊、或是參與訪談，請與我們聯絡。</p>
 								<ul class="actions">
-									<li><a href="#" class="button big alt">我想參加</a></li>
+									<li><a href="https://homeseen.typeform.com/to/LsYxVp" class="button big alt">我想參加</a></li>
 								</ul>
 							</section>
 						</div>
@@ -122,7 +122,7 @@
 								<h3>[徵求] 由家人照顧失智長輩的家庭</h3>
 								<p>如果您家裡有失智症的長輩<br>願意填寫簡單的資訊、或是參與訪談，請與我們聯絡。</p>
 								<ul class="actions">
-									<li><a href="#" class="button big alt">我想參加</a></li>
+									<li><a href="https://homeseen.typeform.com/to/tq1Jnj" class="button big alt">我想參加</a></li>
 								</ul>
 							</section>
 						</div>
